Moved save button, and some spacing fixes.

--- a/client/apogee.less
+++ b/client/apogee.less
@@ -16,6 +16,7 @@
 @reallyBigFontSize: 24px;
 
 @baseLineHeight: 14px;
+@baseSpacing: 16px;
 
 body {
     padding: 8px;
@@ -44,6 +45,7 @@ span.code {
 
 .topnav {
   border-bottom: 1px solid @textColorDefault;
+  margin-bottom: 2*@baseSpacing;
 
   .login {
     margin-top: 30px;
@@ -98,7 +100,7 @@ span.code {
 }
 
 ul.fileTree {
-    margin-left: 0px;
+    margin-left: 0;
     .rounded-border(@borderRadius);
 
     span {
@@ -176,6 +178,11 @@ ul.fileTree {
   h4 {
       padding-left: 38px;
   }
+}
+
+#buttonRow {
+  margin-bottom: 12px;
+
 }
 
 #addFiles {
